resources/dsaas/bayesian-production/APIcast.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-prod-http
  labels:
    service: apicast
  name: crda-api
spec:
  port:
    targetPort: proxy
  host: gw.api.openshift.io
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: apicast
    weight: 100
  wildcardPolicy: None
