resources/dsaas/bayesian-production/bayesian-api.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    template: bayesian-api
  name: bayesian-api
spec:
  host: bayesian-api-bayesian-production.09b5.dsaas.openshiftapps.com
  to:
    kind: Service
    name: bayesian-api
    weight: 100
  wildcardPolicy: None
