resources/dsaas/bayesian-production/bayesian-jobs.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    template: bayesian-jobs
  name: bayesian-jobs
spec:
  path: /ingestions
  to:
    kind: Service
    name: bayesian-jobs
    weight: 100
  wildcardPolicy: None
