resources/dsaas/bayesian-production/bayesian-osa-api.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-prod-http
  labels:
    template: osa
  name: osa-api-server
spec:
  host: bayesian-osa.api.openshift.io
  to:
    kind: Service
    name: osa-api-server
    weight: 100
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  wildcardPolicy: None
