resources/dsaas/bayesian-production/f8a-3scale-connect-api.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-prod-http
  labels:
    service: f8a-3scale-connect-api
  name: f8a-3scale-connect-api
spec:
  host: 3scale-connect.api.openshift.io
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: f8a-3scale-connect-api
    weight: 100
  wildcardPolicy: None
