resources/dsaas/bayesian-production/f8a-emr-deployment.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    service: f8a-emr-deployment
    template: f8a-emr-deployment
  name: f8a-emr-deployment
spec:
  host: f8a-emr-deployment.api.openshift.io
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: f8a-emr-deployment
    weight: 100
  wildcardPolicy: None
