resources/dsaas/bayesian-production/f8a-gemini-server.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-prod-http
  labels:
    service: f8a-gemini-server
  name: f8a-gemini-server
spec:
  host: gemini.api.openshift.io
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: f8a-gemini-server
    weight: 100
  wildcardPolicy: None
