resources/dsaas/bayesian-production/f8a-server-backbone.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    template: f8a-server-backbone
  name: f8a-server-backbone
spec:
  host: f8a-server-backbone-bayesian-production.09b5.dsaas.openshiftapps.com
  to:
    kind: Service
    name: f8a-server-backbone
    weight: 100
  wildcardPolicy: None
