resources/dsaas/bayesian-production/recommender-api-openshift-io.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-prod-http
  labels:
    service: bayesian-anitya
  name: recommender-api-openshift-io
spec:
  host: recommender.api.openshift.io
  port:
    targetPort: "32000"
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: bayesian-api
    weight: 100
  wildcardPolicy: None
