resources/dsaas/bayesian-production/stack-analytics-report.openshift.io.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-prod-http
  name: stack-analytics-report.openshift.io
spec:
  host: stack-analytics-report.openshift.io
  port:
    targetPort: "8080"
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: fabric8-analytics-stack-report-ui
    weight: 100
  wildcardPolicy: None
